Minimal fix for #1394
The logic is still incorrect, but remove the crash for the moment.